hard-gists/5441636/run.log
=== Docker Run Log for 5441636 ===
Started at: Mi 29. Okt 15:41:23 CET 2025

[2025-10-29 15:41:23] START: Running container for 5441636
[2025-10-29 15:41:23] SUCCESS: Container 5465f28aa72f69a8b91838cb5a252b1ee12581f092d2d02cf75d6c569a016590 started for 5441636
=== Container logs for 5441636 ===
  File "/snippet.py", line 57
    print repr(sock.recv(4096))  # TBD: read output properly and deserialize it
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5441636 ===
[2025-10-29 15:41:25] INFO: Container 5465f28aa72f69a8b91838cb5a252b1ee12581f092d2d02cf75d6c569a016590 has stopped
